@startuml

    ' remove the spot
    hide circle
    ' avoid problems with angled crows feet
    skinparam linetype ortho
    ' font
    skinparam defaultFontName Arial

    ' define styles
    !define desc(x) <color:gray>(x)</color>
    !define refers(x) <i><color:green>x</color></i>
    !define FK(x) <color:#424897><<FK>></color>  x<color:#000></color>
    !define PK(x) <color:#973A4A><<PK>></color> x

    title Film - Showtimes Database

    entity "Persons" {
    PK(PersonID)
    --
    *Name
    *DoB
    }
    
    entity "Ratings" {
    PK(FK(ViewerID)) refers(Persons.PersonID)
    PK(FK(FilmID)) refers(Films.FilmID)
    --
    *Rating
    }

    entity "Films" {
    PK(FilmID)
    --
    *Title
    *FK(DirectorID) refers(Persons.PersonID)
    }

    entity "Cast" {
    PK(FK(FilmID)) refers(Films.FilmID)
    PK(FK(ActorID)) refers(Persons.PersonID)   
    }

    entity "Theatres" {
    PK(TheatreID)
    --
    *Name
    *Location
    }

    entity "Screens" {
    PK(ScreenID)
    --
    *FK(Theatre) refers(Theatres.TheatreID)
    *ScreenNumber
    }

    entity "Showtimes" {
    PK(FK(Film)) refers(Films.FilmID)
    PK(FK(Screen)) refers(Screens.ScreenID)
    PK(ShowTime)
    }

    ' relationships
    Theatres --> Screens
    Showtimes <-- Screens
    Persons --> Cast
    Persons --> Films
    Films --> Showtimes
    Films --> Ratings
    Persons --> Ratings
    Films --> Cast
@enduml

